fix(ChatTile): fix alert dot alignment

--- a/app/client/stylesheets/components/ChatTile.scss
+++ b/app/client/stylesheets/components/ChatTile.scss
@@ -68,7 +68,7 @@
         border-radius: 50%;
         background: $color-brand-secondary;
         position: absolute;
-        top: 29px;
+        top: 29px + 20px;
         right: 15px;
         display: none;
     }
